[project]
name = "maea-tenant-gateway"
version = "0.2.0"
description = "MAEA Multi-Tenant Gateway — Enterprise isolation middleware for Dify"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]
